--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="overmij.html">Over mij</a></li>
+                    <li><a href="4v.html">4vwo</a></li>
                     <li><a href="info.html">Informatie</a></li>
                 </ul>
             </nav>
