--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="overmij.html">4 vwo</a></li>
                     <li><a href="info.html">Informatie</a></li>
+                    <li><a href="voorbeeld-2.html">Voorbeeld</a></li>
                 </ul>
             </nav>
             
