--- a/voorbeeld-2.html
+++ b/voorbeeld-2.html
@@ -4,7 +4,7 @@
 
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Dit is een eenvoudige website</title>
+        <title>Dit is het tweede voorbeeld</title>
     </head>
     
     <body>
@@ -19,7 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="overmij.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
-                    <li><a class="active" href="info-pagina.html">Informatie</a></li>
+                    <li><a class="active" href="voorbeeld-2.html">Informatie</a></li>
                 </ul>
             </nav>
             
