--- a/voorbeeld.html
+++ b/voorbeeld.html
@@ -18,8 +18,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="overmij.html">Over mij</a></li>
-                    <li><a href="info.html">Informatie</a></li>
-                    <li><a class="active" href="info-pagina.html">Informatie</a></li>
+                    <li><a class="active" href="info.html">Informatie</a></li>
                 </ul>
             </nav>
             
