--- a/overmij.html
+++ b/overmij.html
@@ -17,9 +17,11 @@
             
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Hoofdpagina</a></li>
                     <li><a class="active" href="overmij.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
+                    <li><a href="voorbeeld.html">Nog een pagina</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             
