--- a/voorbeeld.html
+++ b/voorbeeld.html
@@ -10,15 +10,17 @@
     <body>
         <main>
             <header>
-                <h1>Informatie overal!</h1>
+                <h1>Dit is nog een extra pagina</h1>
                 <br>
             </header>
             
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Hoofdpagina</a></li>
                     <li><a href="overmij.html">Over mij</a></li>
-                    <li><a class="active" href="info.html">Informatie</a></li>
+                    <li><a href="info.html">Informatie</a></li>
+                    <li><a class="active" href="voorbeeld.html">Nog een pagina</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             
