--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 	<main>
 		<header>
-			<h1 id="hoofdtitel" class="belangrijk">Rotterdam</h1>
+            <h1 id="hoofdtitel">Rotterdam</h1>
+            <h2 class="veranderKleur">Dit is een ondertitel</h2>
 		</header>
 
 		<nav>
@@ -24,7 +25,7 @@
 		</nav>
 
 		<article>
-			<img class="midden" src="afbeeldingen/loremipsum.jpg">
+			<img class="slide midden" id="bovenste" src="afbeeldingen/Rotterdam-1.jpg">
 			<p><a href="https://nl.wikipedia.org/wiki/Rotterdam">Klik hier om naar Wikipedia te gaan!</a>
 				<br><em>Rotterdam is een havenstad in het westen van Nederland</em>, in de provincie Zuid-Holland. Met
 				587.960 inwoners (1 januari 2020) is het de op een na grootste stad van Nederland qua inwoneraantal, na
@@ -38,7 +39,7 @@
 				diverse bevolking, met opgeteld 174 nationaliteiten. </p>
 		</article>
 		<article>
-			<img class="midden" src="afbeeldingen/loremipsum.jpg">
+			<img class="midden" src="afbeeldingen/erasmus.jpg">
 			<p><em>De Erasmusbrug is naast de Willemsbrug de tweede brug over de Nieuwe Maas in het centrum van Rotterdam</em>.
 				Hij is vernoemd naar de Nederlandse priester en humanist Erasmus. De brug verbindt de wijk Kop van Zuid
 				met het centrum aan de noordzijde van de rivier.</p>
