--- a/info.html
+++ b/info.html
@@ -10,8 +10,7 @@
     <body>
         <main>
             <header>
-                <h1>Nog meer informatie</h1>
-                <br>
+                <h1 class="slide">Nog meer informatie</h1>
             </header>
             
             <nav>
