--- a/overmij.html
+++ b/overmij.html
@@ -21,7 +21,7 @@
                     <li><a class="active" href="overmij.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
                     <li><a href="voorbeeld.html">Nog een pagina</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a  id="contact" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             
