nog een wijziging
Signed-off-by: vangeest <gee@emmauscollege.nl>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Dit is een heel eenvoudige test website</title>
+        <title>Dit is een heel erg    eenvoudige test website</title>
     </head>
     
     <body>
