--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<main>
 		<header>
-            <h1 id="hoofdtitel">Rotterdam</h1>
+            <h1 class="fade-in" id="hoofdtitel">Rotterdam</h1>
             <h2 class="veranderKleur">Dit is een ondertitel</h2>
 		</header>
 
